# LuaPlayer-by-YuliaTeam

./: .gitignore  CMakeLists.txt  Cyberpunk.pgf  Cyberpunk_test.pgf  DATA.PCK  DATA.PCK.bak  EBOOT.PBP  EBOOT.PBP.bak  ERROR_PIC.h  JB.pgf  LP.c  LuaPlayerYT.prx  Makefile  Makefile.backup  PARAM.SFO  README.md  SASHA.srt  SASHA.srt.bak  TS_721_MANDYWORLD.srt  Ubuntu.pgf  Ubuntu_test.pgf  afterword.at3  archieve.rar  asyncCycle.lua  asyncCycle_new.lua  boatstation.pmp  build.sh  clean.bat  config.ini  cybersiberia.pgf  debug.txt  determination-max.pgf  determination-max_test.pgf  dryout.at3  dump_pgf.exe.stackdump  error_img.c  error_img.h  error_log.txt  example.srt  guitar.wav.bak  (+15 more)
.github/workflows/: build.yml
Support/: Makefile  Stub.S  Support.S  main.c
fonts/: DejaVu.pgf  DejaVuSans.pgf  DroidSans.pgf  PotraLight.pgf  Shentox.pgf  SourceCode.pgf  Yanone.pgf  boycott.pgf  font.pgf  roboto.pgf  skull_candy.pgf  ubuntu.pgf
include/: vaudio.h
include/pge/: pge.h
libs/: callbacks.c  callbacks.h
libs/Mp4/: Mp4.c  Mp4.h  atom.c  mp4_read.c  mp4_read.h  pspmpeg.h  time_math.c  time_math.h
libs/aalib/: pspaalib.c  pspaalib.h  pspaalibcommon.h  pspaalibflac.c  pspaalibflac.h  pspaalibogg.c  pspaalibogg.h  pspaalibscemp3.h  pspaalibwav.c
libs/aalib — копия/: pspaalib.c  pspaalib.h  pspaalibat3.h  pspaalibcommon.h  pspaalibogg.h  pspaalibwav.c
libs/aalib2/: pspaalibogg.c  pspaalibscemp3.c  pspaalibwav.c  pspaalibwav.h
libs/ctrl/: controls.c  controls.h
libs/g2d/: g2d.c  g2d.h  glib2d.c  glib2d.h
libs/include_res/: es_error.c  ht.c  ht_jpg.c  ht_tga.c  output_pgf.c  output_png.c  (+5 more)
lua/: LUA.c  LUA.h  asyncCycle.c  asyncCycle.h  audio.c  audio.h  batch.c  batch.h  common.c  common.h  ctrl.c  ctrl.h  graphics.c  graphics.h  lgn.c  lgn.h  particles.c  particles.h  pmp.c  pmp.h  system.c  system.h  timer.c  timer.h  usb.c  usb.h  vfpu_math.c  vfpu_math.h
res/: ICON1.PMF  OXXXYMIRON_DNTRNK.at3  fitgirl.at3  icon1.at3  icon_pmf.at3  image (14).psd  image (21).psd  lost.at3  snd0.at3
testres/: ICON1.PMF  SND0.AT3
(+12 files in other folders)
